crates/monochange/tests/snapshots/source_providers__multiline_releaserequest_commitmessage_body@gitea_release_pr.snap
---
source: crates/monochange/tests/source_providers.rs
expression: contents
---
Prepare release.

- release targets: core (1.0.1)
- released packages: workflow-core
- updated changelogs: crates/core/CHANGELOG.md

## monochange Release Record

<!-- monochange:release-record:start -->
```json
{
  "changedFiles": [
    "Cargo.toml",
    "crates/core/CHANGELOG.md",
    "crates/core/Cargo.toml"
  ],
  "changelogs": [
    {
      "format": "monochange",
      "notes": {
        "sections": [
          {
            "collapsed": false,
            "entries": [
              "#### add gitea fixture coverage"
            ],
            "title": "Patch"
          }
        ],
        "summary": [],
        "title": "core [1.0.1](https://codeberg.org/org/monochange/releases/tag/core/v1.0.1) ([DATE])"
      },
      "ownerId": "core",
      "ownerKind": "package",
      "path": "crates/core/CHANGELOG.md",
      "rendered": "[multiline text]"
    }
  ],
  "changesets": [
    {
      "context": {
        "capabilities": {
          "actorProfiles": false,
          "commitWebUrls": true,
          "issueComments": false,
          "relatedIssues": false,
          "reviewRequestLookup": false
        },
        "host": "codeberg.org",
        "introduced": null,
        "lastUpdated": null,
        "provider": "gitea",
        "relatedIssues": []
      },
      "details": null,
      "path": ".changeset/feature.md",
      "summary": "add gitea fixture coverage",
      "targets": [
        {
          "bump": "patch",
          "changeType": "patch",
          "evidenceRefs": [],
          "id": "core",
          "kind": "package",
          "origin": "direct-change"
        }
      ]
    }
  ],
  "command": "release-pr",
  "createdAt": "[DATETIME]Z",
  "deletedChangesets": [],
  "groupVersion": null,
  "kind": "monochange.releaseRecord",
  "packagePublications": [
    {
      "ecosystem": "cargo",
      "mode": "builtin",
      "package": "core",
      "registry": "crates_io",
      "trustedPublishing": {
        "enabled": true,
        "environment": null,
        "repository": null,
        "workflow": null
      },
      "version": "1.0.1"
    }
  ],
  "provider": {
    "host": "https://codeberg.org",
    "kind": "gitea",
    "owner": "org",
    "repo": "monochange"
  },
  "releaseTargets": [
    {
      "id": "core",
      "kind": "package",
      "members": [
        "core"
      ],
      "release": true,
      "tag": true,
      "tagName": "core/v1.0.1",
      "version": "1.0.1",
      "versionFormat": "namespaced"
    }
  ],
  "releasedPackages": [
    "workflow-core"
  ],
  "updatedChangelogs": [
    "crates/core/CHANGELOG.md"
  ],
  "v": "[SCHEMA_VERSION]",
  "version": "1.0.1"
}
```
<!-- monochange:release-record:end -->
