crates/monochange/tests/snapshots/source_providers__multiline_releaserequest_commitmessage_body@github_release_pr.snap
---
source: crates/monochange/tests/source_providers.rs
expression: contents
---
Prepare release.

- release targets: core (1.1.0)
- released packages: workflow-core
- updated changelogs: crates/core/CHANGELOG.md

## monochange Release Record

<!-- monochange:release-record:start -->
```json
{
  "changedFiles": [
    "Cargo.toml",
    "crates/core/CHANGELOG.md",
    "crates/core/Cargo.toml"
  ],
  "changelogs": [
    {
      "format": "monochange",
      "notes": {
        "sections": [
          {
            "collapsed": false,
            "entries": [
              "#### add github fixture coverage"
            ],
            "title": "Minor"
          }
        ],
        "summary": [],
        "title": "core [1.1.0](https://github.com/ifiokjr/monochange/releases/tag/core/v1.1.0) ([DATE])"
      },
      "ownerId": "core",
      "ownerKind": "package",
      "path": "crates/core/CHANGELOG.md",
      "rendered": "[multiline text]"
    }
  ],
  "changesets": [
    {
      "context": {
        "capabilities": {
          "actorProfiles": true,
          "commitWebUrls": true,
          "issueComments": true,
          "relatedIssues": true,
          "reviewRequestLookup": true
        },
        "host": "github.com",
        "introduced": null,
        "lastUpdated": null,
        "provider": "github",
        "relatedIssues": []
      },
      "details": null,
      "path": ".changeset/feature.md",
      "summary": "add github fixture coverage",
      "targets": [
        {
          "bump": "minor",
          "changeType": "minor",
          "evidenceRefs": [],
          "id": "core",
          "kind": "package",
          "origin": "direct-change"
        }
      ]
    }
  ],
  "command": "release-pr",
  "createdAt": "[DATETIME]Z",
  "deletedChangesets": [],
  "groupVersion": null,
  "kind": "monochange.releaseRecord",
  "packagePublications": [
    {
      "ecosystem": "cargo",
      "mode": "builtin",
      "package": "core",
      "registry": "crates_io",
      "trustedPublishing": {
        "enabled": true,
        "environment": null,
        "repository": null,
        "workflow": null
      },
      "version": "1.1.0"
    }
  ],
  "provider": {
    "host": null,
    "kind": "github",
    "owner": "ifiokjr",
    "repo": "monochange"
  },
  "releaseTargets": [
    {
      "id": "core",
      "kind": "package",
      "members": [
        "core"
      ],
      "release": true,
      "tag": true,
      "tagName": "core/v1.1.0",
      "version": "1.1.0",
      "versionFormat": "namespaced"
    }
  ],
  "releasedPackages": [
    "workflow-core"
  ],
  "updatedChangelogs": [
    "crates/core/CHANGELOG.md"
  ],
  "v": "0.0",
  "version": "1.1.0"
}
```
<!-- monochange:release-record:end -->
