crates/monochange/tests/snapshots/source_providers__source_provider_diagnostics_match_snapshot@gitea.snap
---
source: crates/monochange/tests/source_providers.rs
expression: redacted
---
{
  "changesets": [
    {
      "context": {
        "capabilities": {
          "actorProfiles": false,
          "commitWebUrls": true,
          "issueComments": false,
          "relatedIssues": false,
          "reviewRequestLookup": false
        },
        "host": "codeberg.org",
        "introduced": null,
        "lastUpdated": null,
        "provider": "gitea",
        "relatedIssues": []
      },
      "details": null,
      "path": ".changeset/feature.md",
      "summary": "add gitea fixture coverage",
      "targets": [
        {
          "bump": "patch",
          "changeType": "patch",
          "evidenceRefs": [],
          "id": "core",
          "kind": "package",
          "origin": "direct-change"
        }
      ]
    }
  ],
  "requestedChangesets": [
    ".changeset/feature.md"
  ]
}
