crates/monochange/tests/snapshots/source_providers__source_provider_diagnostics_match_snapshot@github.snap
---
source: crates/monochange/tests/source_providers.rs
expression: redacted
---
{
  "changesets": [
    {
      "context": {
        "capabilities": {
          "actorProfiles": true,
          "commitWebUrls": true,
          "issueComments": true,
          "relatedIssues": true,
          "reviewRequestLookup": true
        },
        "host": "github.com",
        "introduced": null,
        "lastUpdated": null,
        "provider": "github",
        "relatedIssues": []
      },
      "details": null,
      "path": ".changeset/feature.md",
      "summary": "add github fixture coverage",
      "targets": [
        {
          "bump": "minor",
          "changeType": "minor",
          "evidenceRefs": [],
          "id": "core",
          "kind": "package",
          "origin": "direct-change"
        }
      ]
    }
  ],
  "requestedChangesets": [
    ".changeset/feature.md"
  ]
}
