crates/monochange/tests/snapshots/source_providers__source_provider_diagnostics_match_snapshot@gitlab.snap
---
source: crates/monochange/tests/source_providers.rs
expression: redacted
---
{
  "changesets": [
    {
      "context": {
        "capabilities": {
          "actorProfiles": false,
          "commitWebUrls": true,
          "issueComments": false,
          "relatedIssues": false,
          "reviewRequestLookup": false
        },
        "host": "gitlab.com",
        "introduced": null,
        "lastUpdated": null,
        "provider": "gitlab",
        "relatedIssues": []
      },
      "details": null,
      "path": ".changeset/feature.md",
      "summary": "add gitlab fixture coverage",
      "targets": [
        {
          "bump": "minor",
          "changeType": "minor",
          "evidenceRefs": [],
          "id": "core",
          "kind": "package",
          "origin": "direct-change"
        }
      ]
    }
  ],
  "requestedChangesets": [
    ".changeset/feature.md"
  ]
}
