crates/monochange/tests/snapshots/source_providers__source_provider_scenarios_match_snapshot@gitea_release_pr.snap
---
source: crates/monochange/tests/source_providers.rs
expression: redacted
---
{
  "issueComments": [],
  "manifest": {
    "changedFiles": [
      "Cargo.toml",
      "crates/core/CHANGELOG.md",
      "crates/core/Cargo.toml"
    ],
    "changelogs": [
      {
        "format": "monochange",
        "notes": {
          "sections": [
            {
              "collapsed": false,
              "entries": [
                "#### add gitea fixture coverage"
              ],
              "title": "Patch"
            }
          ],
          "summary": [],
          "title": "core [1.0.1](https://codeberg.org/org/monochange/releases/tag/core/v1.0.1) ([DATE])"
        },
        "ownerId": "core",
        "ownerKind": "package",
        "path": "crates/core/CHANGELOG.md",
        "rendered": "[multiline text]"
      }
    ],
    "changesets": [
      {
        "context": {
          "capabilities": {
            "actorProfiles": false,
            "commitWebUrls": true,
            "issueComments": false,
            "relatedIssues": false,
            "reviewRequestLookup": false
          },
          "host": "codeberg.org",
          "introduced": null,
          "lastUpdated": null,
          "provider": "gitea",
          "relatedIssues": []
        },
        "details": null,
        "path": ".changeset/feature.md",
        "summary": "add gitea fixture coverage",
        "targets": [
          {
            "bump": "patch",
            "changeType": "patch",
            "evidenceRefs": [],
            "id": "core",
            "kind": "package",
            "origin": "direct-change"
          }
        ]
      }
    ],
    "command": "release-pr",
    "deletedChangesets": [],
    "dryRun": true,
    "groupVersion": null,
    "packagePublications": [
      {
        "ecosystem": "cargo",
        "mode": "builtin",
        "package": "core",
        "registry": "crates_io",
        "trustedPublishing": {
          "enabled": true,
          "environment": null,
          "repository": null,
          "workflow": null
        },
        "version": "1.0.1"
      }
    ],
    "plan": {
      "compatibilityEvidence": [],
      "decisions": [
        {
          "bump": "patch",
          "package": "cargo:crates/core/Cargo.toml",
          "plannedVersion": "1.0.1",
          "reasons": [
            "add gitea fixture coverage"
          ],
          "trigger": "direct-change",
          "upstreamSources": [
            "cargo:crates/core/Cargo.toml"
          ]
        }
      ],
      "groups": [],
      "unresolvedItems": [],
      "warnings": [],
      "workspaceRoot": "."
    },
    "releaseRecordPath": "[ROOT]/.monochange/releases/[SHA]/release.json",
    "releaseTargets": [
      {
        "id": "core",
        "kind": "package",
        "members": [
          "core"
        ],
        "release": true,
        "renderedChangelogTitle": "core [1.0.1](https://codeberg.org/org/monochange/releases/tag/core/v1.0.1) ([DATE])",
        "renderedTitle": "core 1.0.1 ([DATE])",
        "tag": true,
        "tagName": "core/v1.0.1",
        "version": "1.0.1",
        "versionFormat": "namespaced"
      }
    ],
    "releasedPackages": [
      "workflow-core"
    ],
    "version": "1.0.1"
  },
  "packagePublish": null,
  "publishRateLimits": null,
  "releaseCommit": null,
  "releaseRequest": {
    "autoMerge": false,
    "baseBranch": "main",
    "body": "[multiline text]",
    "commitMessage": {
      "body": "[multiline text]",
      "subject": "chore(release): prepare release"
    },
    "headBranch": "monochange/release/release-pr",
    "labels": [
      "release"
    ],
    "owner": "org",
    "provider": "gitea",
    "repo": "monochange",
    "repository": "org/monochange",
    "title": "chore(release): prepare release"
  },
  "releases": []
}
