crates/monochange/tests/snapshots/source_providers__source_provider_scenarios_match_snapshot@github_release_pr.snap
---
source: crates/monochange/tests/source_providers.rs
expression: json
---
{
  "issueComments": [],
  "manifest": {
    "changedFiles": [
      "Cargo.toml",
      "crates/core/CHANGELOG.md",
      "crates/core/Cargo.toml"
    ],
    "changelogs": [
      {
        "format": "monochange",
        "notes": {
          "sections": [
            {
              "collapsed": false,
              "entries": [
                "#### add github fixture coverage"
              ],
              "title": "Minor"
            }
          ],
          "summary": [],
          "title": "core [1.1.0](https://github.com/ifiokjr/monochange/releases/tag/core/v1.1.0) ([DATE])"
        },
        "ownerId": "core",
        "ownerKind": "package",
        "path": "crates/core/CHANGELOG.md",
        "rendered": "## core [1.1.0](https://github.com/ifiokjr/monochange/releases/tag/core/v1.1.0) ([DATE])\n\n### Minor\n\n#### add github fixture coverage"
      }
    ],
    "changesets": [
      {
        "context": {
          "capabilities": {
            "actorProfiles": true,
            "commitWebUrls": true,
            "issueComments": true,
            "relatedIssues": true,
            "reviewRequestLookup": true
          },
          "host": "github.com",
          "introduced": null,
          "lastUpdated": null,
          "provider": "github",
          "relatedIssues": []
        },
        "details": null,
        "path": ".changeset/feature.md",
        "summary": "add github fixture coverage",
        "targets": [
          {
            "bump": "minor",
            "changeType": "minor",
            "evidenceRefs": [],
            "id": "core",
            "kind": "package",
            "origin": "direct-change"
          }
        ]
      }
    ],
    "command": "release-pr",
    "deletedChangesets": [],
    "dryRun": true,
    "groupVersion": null,
    "packagePublications": [
      {
        "ecosystem": "cargo",
        "mode": "builtin",
        "package": "core",
        "registry": "crates_io",
        "trustedPublishing": {
          "enabled": true,
          "environment": null,
          "repository": null,
          "workflow": null
        },
        "version": "1.1.0"
      }
    ],
    "plan": {
      "compatibilityEvidence": [],
      "decisions": [
        {
          "bump": "minor",
          "package": "cargo:crates/core/Cargo.toml",
          "plannedVersion": "1.1.0",
          "reasons": [
            "add github fixture coverage"
          ],
          "trigger": "direct-change",
          "upstreamSources": [
            "cargo:crates/core/Cargo.toml"
          ]
        }
      ],
      "groups": [],
      "unresolvedItems": [],
      "warnings": [],
      "workspaceRoot": "."
    },
    "releaseTargets": [
      {
        "id": "core",
        "kind": "package",
        "members": [
          "core"
        ],
        "release": true,
        "renderedChangelogTitle": "core [1.1.0](https://github.com/ifiokjr/monochange/releases/tag/core/v1.1.0) ([DATE])",
        "renderedTitle": "core 1.1.0 ([DATE])",
        "tag": true,
        "tagName": "core/v1.1.0",
        "version": "1.1.0",
        "versionFormat": "namespaced"
      }
    ],
    "releasedPackages": [
      "workflow-core"
    ],
    "version": "1.1.0"
  },
  "packagePublish": null,
  "publishRateLimits": null,
  "releaseCommit": null,
  "releaseRequest": {
    "autoMerge": true,
    "baseBranch": "main",
    "body": "## Prepared release\n\n- command: `release-pr`\n- package `core` -> `core/v1.1.0`\n\n## Release notes\n\n### core 1.1.0\n\n### Minor\n\n#### add github fixture coverage\n\n## Changed files\n\n- Cargo.toml\n- crates/core/CHANGELOG.md\n- crates/core/Cargo.toml",
    "commitMessage": {
      "body": "Prepare release.\n\n- release targets: core (1.1.0)\n- released packages: workflow-core\n- updated changelogs: crates/core/CHANGELOG.md\n\n## monochange Release Record\n\n<!-- monochange:release-record:start -->\n```json\n{\n  \"changedFiles\": [\n    \"Cargo.toml\",\n    \"crates/core/CHANGELOG.md\",\n    \"crates/core/Cargo.toml\"\n  ],\n  \"changelogs\": [\n    {\n      \"format\": \"monochange\",\n      \"notes\": {\n        \"sections\": [\n          {\n            \"collapsed\": false,\n            \"entries\": [\n              \"#### add github fixture coverage\"\n            ],\n            \"title\": \"Minor\"\n          }\n        ],\n        \"summary\": [],\n        \"title\": \"core [1.1.0](https://github.com/ifiokjr/monochange/releases/tag/core/v1.1.0) ([DATE])\"\n      },\n      \"ownerId\": \"core\",\n      \"ownerKind\": \"package\",\n      \"path\": \"crates/core/CHANGELOG.md\",\n      \"rendered\": \"## core [1.1.0](https://github.com/ifiokjr/monochange/releases/tag/core/v1.1.0) ([DATE])\\n\\n### Minor\\n\\n#### add github fixture coverage\"\n    }\n  ],\n  \"changesets\": [\n    {\n      \"context\": {\n        \"capabilities\": {\n          \"actorProfiles\": true,\n          \"commitWebUrls\": true,\n          \"issueComments\": true,\n          \"relatedIssues\": true,\n          \"reviewRequestLookup\": true\n        },\n        \"host\": \"github.com\",\n        \"introduced\": null,\n        \"lastUpdated\": null,\n        \"provider\": \"github\",\n        \"relatedIssues\": []\n      },\n      \"details\": null,\n      \"path\": \".changeset/feature.md\",\n      \"summary\": \"add github fixture coverage\",\n      \"targets\": [\n        {\n          \"bump\": \"minor\",\n          \"changeType\": \"minor\",\n          \"evidenceRefs\": [],\n          \"id\": \"core\",\n          \"kind\": \"package\",\n          \"origin\": \"direct-change\"\n        }\n      ]\n    }\n  ],\n  \"command\": \"release-pr\",\n  \"createdAt\": \"[DATETIME]Z\",\n  \"deletedChangesets\": [],\n  \"groupVersion\": null,\n  \"kind\": \"monochange.releaseRecord\",\n  \"packagePublications\": [\n    {\n      \"ecosystem\": \"cargo\",\n      \"mode\": \"builtin\",\n      \"package\": \"core\",\n      \"registry\": \"crates_io\",\n      \"trustedPublishing\": {\n        \"enabled\": true,\n        \"environment\": null,\n        \"repository\": null,\n        \"workflow\": null\n      },\n      \"version\": \"1.1.0\"\n    }\n  ],\n  \"provider\": {\n    \"host\": null,\n    \"kind\": \"github\",\n    \"owner\": \"ifiokjr\",\n    \"repo\": \"monochange\"\n  },\n  \"releaseTargets\": [\n    {\n      \"id\": \"core\",\n      \"kind\": \"package\",\n      \"members\": [\n        \"core\"\n      ],\n      \"release\": true,\n      \"tag\": true,\n      \"tagName\": \"core/v1.1.0\",\n      \"version\": \"1.1.0\",\n      \"versionFormat\": \"namespaced\"\n    }\n  ],\n  \"releasedPackages\": [\n    \"workflow-core\"\n  ],\n  \"updatedChangelogs\": [\n    \"crates/core/CHANGELOG.md\"\n  ],\n  \"v\": \"0.1\",\n  \"version\": \"1.1.0\"\n}\n```\n<!-- monochange:release-record:end -->",
      "subject": "chore(release): prepare release"
    },
    "headBranch": "monochange/release/release-pr",
    "labels": [
      "release"
    ],
    "owner": "ifiokjr",
    "provider": "github",
    "repo": "monochange",
    "repository": "ifiokjr/monochange",
    "title": "chore(release): prepare release"
  },
  "releases": []
}
