crates/monochange/tests/snapshots/source_providers__source_provider_scenarios_match_snapshot@gitlab_publish_release.snap
---
source: crates/monochange/tests/source_providers.rs
expression: redacted
---
{
  "issueComments": [],
  "manifest": {
    "changedFiles": [
      "Cargo.toml",
      "crates/core/CHANGELOG.md",
      "crates/core/Cargo.toml"
    ],
    "changelogs": [
      {
        "format": "monochange",
        "notes": {
          "sections": [
            {
              "collapsed": false,
              "entries": [
                "#### add gitlab fixture coverage"
              ],
              "title": "🚀 Feature"
            }
          ],
          "summary": [],
          "title": "core [1.1.0](https://gitlab.com/group/monochange/-/releases/core/v1.1.0) ([DATE])"
        },
        "ownerId": "core",
        "ownerKind": "package",
        "path": "crates/core/CHANGELOG.md",
        "rendered": "[multiline text]"
      }
    ],
    "changesets": [
      {
        "context": {
          "capabilities": {
            "actorProfiles": false,
            "commitWebUrls": true,
            "issueComments": false,
            "relatedIssues": false,
            "reviewRequestLookup": false
          },
          "host": "gitlab.com",
          "introduced": null,
          "lastUpdated": null,
          "provider": "gitlab",
          "relatedIssues": []
        },
        "details": null,
        "path": ".changeset/feature.md",
        "summary": "add gitlab fixture coverage",
        "targets": [
          {
            "bump": "minor",
            "changeType": "minor",
            "evidenceRefs": [],
            "id": "core",
            "kind": "package",
            "origin": "direct-change"
          }
        ]
      }
    ],
    "command": "publish-release",
    "deletedChangesets": [],
    "dryRun": true,
    "groupVersion": null,
    "packagePublications": [
      {
        "ecosystem": "cargo",
        "mode": "builtin",
        "package": "core",
        "registry": "crates_io",
        "trustedPublishing": {
          "enabled": true,
          "environment": null,
          "repository": null,
          "workflow": null
        },
        "version": "1.1.0"
      }
    ],
    "plan": {
      "compatibilityEvidence": [],
      "decisions": [
        {
          "bump": "minor",
          "package": "cargo:crates/core/Cargo.toml",
          "plannedVersion": "1.1.0",
          "reasons": [
            "add gitlab fixture coverage"
          ],
          "trigger": "direct-change",
          "upstreamSources": [
            "cargo:crates/core/Cargo.toml"
          ]
        }
      ],
      "groups": [],
      "unresolvedItems": [],
      "warnings": [],
      "workspaceRoot": "."
    },
    "releaseTargets": [
      {
        "id": "core",
        "kind": "package",
        "members": [
          "core"
        ],
        "release": true,
        "renderedChangelogTitle": "core [1.1.0](https://gitlab.com/group/monochange/-/releases/core/v1.1.0) ([DATE])",
        "renderedTitle": "core 1.1.0 ([DATE])",
        "tag": true,
        "tagName": "core/v1.1.0",
        "version": "1.1.0",
        "versionFormat": "namespaced"
      }
    ],
    "releasedPackages": [
      "workflow-core"
    ],
    "version": "1.1.0"
  },
  "packagePublish": null,
  "publishRateLimits": null,
  "releaseCommit": null,
  "releaseRequest": null,
  "releases": [
    {
      "body": "[multiline text]",
      "draft": false,
      "generateReleaseNotes": false,
      "name": "core 1.1.0 ([DATE])",
      "owner": "group",
      "prerelease": false,
      "provider": "gitlab",
      "repo": "monochange",
      "repository": "group/monochange",
      "tagName": "core/v1.1.0",
      "targetId": "core",
      "targetKind": "package"
    }
  ]
}
